[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
config = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
chrono="0.4"
uuid={ version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
env_logger = "0.10"
log = "0.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dev-dependencies]
reqwest = "0.11.22"

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
  "runtime-tokio",
  # "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]